# knight

./: .gitignore  CMakeLists.txt  README.md  notes
src/: debug.hpp  emit.cpp  emit.hpp  env.cpp  env.hpp  error.hpp  eval.cpp  eval.hpp  funcs.cpp  funcs.hpp  ir.cpp  ir.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  shell_posix.cpp  shell_win32.cpp  sourcepos.hpp  value.cpp  value.hpp
